projects/material/form-builder/src/node-entry.scss
ajf-fb-node-entry {
  display: block;
  position: relative;
  .mat-card-container {
    position: relative;

    .ajf-origin-line {
      position: absolute;
      top: 0;
      left: 25px;
      width: 25px;
      height: 25px;
      border-bottom: 2px solid;
      border-left: 2px solid;
      border-bottom-left-radius: 0.5em;
    }
    .mat-mdc-card {
      margin-left: 50px;
      padding: 0.5em 1em;

      .ajf-title-row {
        display: flex;
        flex: 1 1 auto;
        flex-direction: row wrap;
        align-items: center;

        > .ajf-title {
          flex: 1 1 auto;
          max-width: 25vw;
          margin-right: 10px;
        }

        > .ajf-visibility-condition {
          flex: 1 1 auto;
          font-size: 10px;
          color: #999;
          max-height: 100px;
          max-width: 25vw;
          overflow: hidden;
          text-overflow: ellipsis;
        }

        > .ajf-actions {
          flex: 1 1 auto;
          display: flex;
          justify-content: flex-end;
          white-space: nowrap;
          justify-self: flex-end;
        }
      }

      .ajf-title-row-error {
        color: rgb(244, 67, 54);
      }

      background-color: #ffffff;

      &.ajf-empty {
        line-height: 36px;
        border: 2px dashed;
        box-shadow: none;
        box-sizing: border-box;
        text-align: center;
        color: #ccc;
      }

      &.ajf-draggable-box {
        padding: 5px 5px;
        border-bottom: solid 1px #ccc;
        border-right: solid 1px #ccc;
        color: rgba(0, 0, 0, 0.87);
        box-sizing: border-box;
        cursor: move;
        background: white;
        font-size: 14px;
      }
    }
    &.ajf-highlighted-formbuilder-node > mat-card {
      background-color: #fff9c4 !important;
    }
  }
  .ajf-highlighted-formbuilder-node .mat-mdc-card .mat-expansion-panel .mat-expansion-panel-header {
    background-color: #fff9c4 !important;
  }

  &.ajf-fields-list {
    max-width: 80%;
    min-height: 60px;
    display: block;
    background: white;
    border-radius: 4px;
    overflow: hidden;
  }

  .cdk-drag-placeholder {
    opacity: 0.4;
    min-height: 60px;
    margin-left: 50px;
    border: 1px solid #ccc;
    border-radius: 4px;
    background-color: #fff9c4;
  }

  .ajf-fields-list.cdk-drop-list-dragging .ajf-draggable-box:not(.cdk-drag-placeholder),
  .cdk-drag-animating {
    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
  }
}

